<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/colorVerde"
    tools:context=".RegistrarFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_margin="16dp"
        android:background="@color/colorVerde"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:textColor="@color/colorBlanco"
            android:textSize="35dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/textviewusuario"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textColor="@color/colorBlanco"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/colorBlanco"
            android:textSize="20dp" />




        <TextView
            android:id="@+id/textviewcorreo"
            android:layout_below="@id/editTextcontrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textColor="@color/colorBlanco"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textviewcorreo"
            android:textColor="@color/colorBlanco"
            android:textSize="20dp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/textviewcontrasena"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasena"
            android:textColor="@color/colorBlanco"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextcontrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorBlanco"

            android:textSize="20dp" />






        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnregistrar"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:background="@color/colorBlanco"
            android:layout_centerHorizontal="true"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textviewlogin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textColor="@color/colorBlanco"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>